<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterNewPurchaseActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="26sp"
        android:layout_margin="12dp"
        android:text="@string/nova_compra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/purchase_title_input"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_o_t_tulo_da_compra"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="12dp"
        android:backgroundTint="@color/design_default_color_primary_variant"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/purchase_description_input"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/digite_uma_descri_o_para_a_compra"
        app:layout_constraintTop_toBottomOf="@id/purchase_title_input"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/design_default_color_primary_variant"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:textSize="16sp"
        android:backgroundTint="@color/design_default_color_primary_variant"
        app:layout_constraintTop_toBottomOf="@id/purchase_description_input"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        android:textSize="16sp"
        android:backgroundTint="@color/material_dynamic_secondary50"
        app:layout_constraintTop_toBottomOf="@id/btn_save"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>